actual formatting fixes, added page-wrap class

--- a/styles/practice.css
+++ b/styles/practice.css
@@ -1,13 +1,18 @@
+.page-wrap{
+	width: 1200px;
+	margin: 0 auto;
+}
+
 .scale-header-container {
 	display: inline;
-	text-align: center;
-    margin: 40px;
+	text-align: left;
 }
 
 .scale-header {
 	font-size: 50px;
-	position: relative;
-	top: 50px;
+	position: absolute;
+	left: 582.5px;
+	top: 65px;
 }
 
 .scale-notes {
@@ -15,17 +20,10 @@
     margin-left: auto;
     margin-right: 100px;
     margin-bottom: 30px;
-    position: relative;
-    right: 600px;
+    position: absolute;
+    left: 100px;
+    top: 500px;
 }
-
-.metronome-container {
-	position: relative;
-	bottom: 95px;
-	left: 100px;
-	margin: 30px 200px;
-}
-
 
 #beginner-scale-container{
 	height: 47px;
@@ -60,7 +58,6 @@
 	visibility: visible;
 }
 
-
 .scaleInBar {
 	background : none;
 	border: none;
@@ -93,6 +90,9 @@
 	float: right;
 	display: inline;
 	vertical-align: center;
+	position: absolute;
+	top: 250px;
+	left: 350px;
 }
 
 .controls {
@@ -174,20 +174,6 @@ h2 {
 	text-align: center;
 }
 
-
-#key-dropbtn{
-	padding: 20px;
-    font-size: 47px;
-}
-
-.dropbtn {
-    background-color: white;
-    color: black;
-    
-    border: none;
-    font-family: Comfortaa;
-}
-
 .level-select-button{
 	background : none;
 	border: none;
@@ -195,7 +181,6 @@ h2 {
 	padding: 0;
 	font-family: Comfortaa;
 }
-
 
 #scale-dropbtn{
 	font-size: 35px;
@@ -207,23 +192,6 @@ h2 {
 	top: 100px;
 	left: 1150px;
 	width: 100px;
-}
-
-#drop-arrow{
-	font-size: 40px;
-}
-
-#key-dropdown{
-	position: absolute;
-	top: 100px;
-	left: 25px;
-	width: 60px;
-	height: 55px;
-}
-
-.dropdown {
-	text-align: left;
-		
 }
 
 .scale-dropdown-content {
@@ -243,7 +211,38 @@ h2 {
     display: block;
 }
 
-.scale-dropdown-content a:hover {background-color: #ddd}
+.scale-dropdown-content p:hover {background-color: #ddd}
+
+
+#drop-arrow{
+	font-size: 40px;
+}
+
+#key-dropdown{
+	position: absolute;
+	top: 100px;
+	left: 25px;
+	width: 60px;
+	height: 150px;
+}
+
+#key-dropbtn{
+	padding: 20px;
+    font-size: 47px;
+}
+
+.dropbtn {
+    background-color: white;
+    color: black;
+    
+    border: none;
+    font-family: Comfortaa;
+}
+
+.dropdown {
+	text-align: left;
+		
+}
 
 .dropdown-content {
     display: none;
@@ -255,11 +254,20 @@ h2 {
 
 .dropdown-content a {
     color: black;
-    padding: 8px 16px;
+    padding: 4px 8px;
     margin: 20px;
     text-decoration: none;
     display: block;
 }
+
+.key-select-button{
+	background : none;
+	border: none;
+	margin: 0;
+	padding: 0;
+	font-family: Comfortaa;
+}
+
 
 .dropdown-content a:hover {background-color: #ddd}
 
